fix: update URLEncoder to use string-based charset for Android compatibility